// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense summary 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $123.50
  </h1>
</div>
`;

exports[`should render 2 expenses summary 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $223.50
  </h1>
</div>
`;

exports[`should render expenses summary (no expenses) 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;
